[project]
name = "langgraph-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "huggingface>=0.0.1",
    "huggingface-hub>=1.16.4",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
]
